crates/es-fluent-derive/src/macros/derive_es_fluent_label/snapshots/es_fluent_derive__macros__derive_es_fluent_label__tests__expand_es_fluent_label_prefers_parent_fluent_namespace_over_label_namespace.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent_label/mod.rs
expression: tokens
---
impl ::es_fluent::FluentLabel for NamespacedLabel {
    fn localize_label<__EsFluentLocalizer: ::es_fluent::FluentLocalizer + ?Sized>(
        localizer: &__EsFluentLocalizer,
    ) -> String {
        ::es_fluent::__private::localize_label(
            localizer,
            env!("CARGO_PKG_NAME"),
            "namespaced_label_label",
        )
    }
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_label_inventory_NamespacedLabel {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::FtlVariant {
            name: "NamespacedLabel",
            ftl_key: "namespaced_label_label",
            args: &[],
            module_path: module_path!(),
            line: line!(),
        },
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::FtlTypeInfo {
        type_kind: ::es_fluent::meta::TypeKind::Struct,
        type_name: "NamespacedLabel",
        variants: VARIANTS,
        file_path: file!(),
        module_path: module_path!(),
        namespace: Some(
            ::es_fluent::registry::NamespaceRule::Literal(
                ::std::borrow::Cow::Borrowed("parent"),
            ),
        ),
    };
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
