crates/es-fluent-derive/src/macros/derive_es_fluent_label/snapshots/es_fluent_derive__macros__derive_es_fluent_label__tests__expand_es_fluent_label_rejects_non_bare_origin_flag.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent_label/mod.rs
expression: tokens
---
compile_error!(
    "Attribute error in label container: `#[fluent_label(origin(...))]` has the wrong value shape for key `origin` in label container `NoOrigin`\nhelp: use a bare flag, for example `origin`"
);
