crates/es-fluent-derive/src/macros/derive_es_fluent_label/snapshots/es_fluent_derive__macros__derive_es_fluent_label__tests__expand_es_fluent_label_returns_compile_errors_for_invalid_enum_namespace.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent_label/mod.rs
assertion_line: 247
expression: enum_tokens
---
compile_error!(
    "Attribute error in label container: `#[fluent(namespace = ...)]` has the wrong value shape for key `namespace` in label container `InvalidEnumNamespace`\nhelp: use a namespace rule, for example `namespace = \"ui\"` or `namespace = file`"
);
