crates/es-fluent-derive/src/macros/derive_es_fluent_label/snapshots/es_fluent_derive__macros__derive_es_fluent_label__tests__expand_es_fluent_label_returns_compile_errors_for_invalid_label_opts.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent_label/mod.rs
expression: label_opts_tokens
---
compile_error!(
    "Attribute error in label container: `#[fluent_label(namespace(...))]` has the wrong value shape for key `namespace` in label container `InvalidLabelOpts`\nhelp: use a namespace rule, for example `namespace = \"ui\"` or `namespace = file`"
);
