crates/es-fluent-derive/src/macros/derive_es_fluent_label/snapshots/es_fluent_derive__macros__derive_es_fluent_label__tests__expand_es_fluent_label_returns_compile_errors_for_invalid_struct_namespace.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent_label/mod.rs
assertion_line: 160
expression: struct_tokens
---
::core::compile_error! {
    "Unexpected type `expected string literal, 'file', 'file_relative', 'folder', or 'folder_relative'`"
}
