crates/es-fluent-derive/src/macros/derive_es_fluent_label/snapshots/es_fluent_derive__macros__derive_es_fluent_label__tests__expand_es_fluent_label_uses_enum_type_kind_for_enums.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent_label/mod.rs
assertion_line: 187
expression: tokens
---
impl ::es_fluent::FluentLabel for LoginState {
    fn localize_label<__EsFluentLocalizer: ::es_fluent::FluentLocalizer + ?Sized>(
        localizer: &__EsFluentLocalizer,
    ) -> String {
        ::es_fluent::__private::localize_label(
            localizer,
            (::es_fluent::registry::StaticFluentDomain::from_package_name(
                env!("CARGO_PKG_NAME"),
            ))
                .as_str(),
            "login_state_label",
        )
    }
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_label_inventory_LoginState {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::__macro::ftl_variant(
            "LoginState",
            ::es_fluent::registry::__macro::static_entry_id("login_state_label"),
            &[],
            module_path!(),
            line!(),
        ),
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::__macro::ftl_type_info(
        ::es_fluent::meta::TypeKind::Enum,
        "LoginState",
        VARIANTS,
        file!(),
        module_path!(),
        None,
    );
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
